chore: improve Quarkus Dev experience