@@ -129,6 +129,19 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <jvmArgs>--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports
+                        jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports
+                        jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-exports
+                        jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED --add-exports
+                        jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports
+                        jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-exports
+                        jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports
+                        jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens
+                        jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens
+                        jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+                    </jvmArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -230,6 +243,33 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>skip-checks</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>check</id>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>check</id>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>native</id>
             <activation>
